Fix modal overflow styles

--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -24,23 +24,19 @@
 .ui-modal__modal {
   width: 100%;
   max-height: 100%;
-  overflow: scroll;
   background-color: var(--white);
-  border-radius: 4px;
   flex-grow: 0;
+  overflow-y: scroll;
   transform: translateY(20px);
   opacity: 0;
   transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1) 120ms;
-  box-shadow: 0 14px 25px color(var(--navy700) a(50%));
-
-  &:focus {
-    border: 2px solid red;
-  }
 
   @media screen and (min-width: 768px) {
-    min-height: 620px;
+    min-width: 620px;
     max-width: 620px;
     max-height: calc(100% - 96px);
+    border-radius: 4px;
+    box-shadow: 0 14px 25px color(var(--navy700) a(50%));
   }
 }
 
